# example-cmake-cuda

./: CMakeLists.txt
src/: cpu.hpp  gpu.cu  gpu.hu  main.cu
